--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </section>
           <section class="job-item">
             <div class="job-details">
-              <h3>UI Design</h3>
+              <h3>Frontend Developer</h3>
               <p>SpeedTestPros</p>
               <p>April 2020 - September 2020</p>
               <p> 6 Month Contract </p>
@@ -99,6 +99,22 @@
               <li>CSS</li>
               <li>Javascript</li>
               <li>Python</li>
+              </li>
+            </ul>
+          </p>
+          </section>
+         <section>
+
+            <h3>Udacity - Online</h3>
+            <p>Full Stack Web Development</p>
+            <!-- <p>Summary or accomplishments -->
+              <ul>
+              <li>PYTHON</li>
+              <li>JAVASCRIPT</li>
+              <li>POSTGRESQL</li>
+              <li>FLASK</li>
+              <li>DOCKER</li>
+              <li>KUBERNETES</li>
               </li>
             </ul>
           </p>
