--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
           <!--Project 3-->
           <section class="project-item">
-            <img src="images/pam.jpg" alt="picture of lion">
+            <img src="images/pam.jpg" alt="picture of project">
             <h3>Pixel Creator</h3>
             <p> In this project I was tasked to build a single-page web app that allows users to draw pixel art on a customizable canvas. In this project I defined variables with const and let. I accessed the DOM using methods of the document object. I declared functions and attatching them to DOM objects as event listeners and wrote nested loops and used loop variables. </p>
-            <a class="btn" href="https://github.com/almonte914/pixelproject" target="_blank">GitHub</a>
+            <a class="btn" href="https://almonte914.github.io/pixelproject/" target="_blank">GitHub</a>
           </section>
         </div>
       </section>
@@ -63,24 +63,13 @@
             <div class="job-details">
               <h3>Frontend Developer</h3>
               <p>Nude Organix</p>
-              <p>October 2020 - Present</p>
+              <p>May 2020 - October 2020</p>
             </div>
             <div class="job-summary">
               <p> My role in this company is to make sure the overall design is functional and optimized to work on all mobile formats. Maintain brand consistency across all web pages. Routinely test website for ease of use, speed , and other quality factors as well as fixing any websites issues or bugs that may arise.</p>
             </div>
           </section>
-          <section class="job-item">
-            <div class="job-details">
-              <h3>Frontend Developer</h3>
-              <p>SpeedTestPros</p>
-              <p>April 2020 - September 2020</p>
-              <p> 6 Month Contract </p>
-            </div>
-            <div class="job-summary">
-              <p> My role in this company was to implement graphic user interface elements such as menus, tabs, and widgets. Build navigation buttons and search fields. Conduct layout adjustments and make sure the website adheres to style standards on fonts, colors, and images. </p>
-            </div>
-        </div>
-      </section>
+          
       <!-- End of Job block. -->
 
 
